# NRC-HPM-Renderer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  install-openvdb.bat  tmp_kp_shader.comp  tmp_kp_shader.comp.spv
NRC-Hpm-Bench/: .gitignore  NRC-Hpm-Bench.pyproj  NRC_Hpm_Bench.py  configs.csv
WinBench/: .gitignore  NRC_Hpm_Bench.py  win_bench.py
data/image/: photostudio.hdr
data/model/backpack/: backpack.mtl
data/shader/draw_tex2D/: draw_tex2D.frag  draw_tex2D.frag.spv  draw_tex2D.vert  draw_tex2D.vert.spv
data/shader/gen_rays/: gen_rays.comp
data/shader/include/: common.glsl  constants.glsl  defines.glsl  descriptors.glsl  dir_gen.glsl  extensions.glsl  mc-constants.glsl  mc-descriptors.glsl  mrhe.glsl  nn.glsl  nrc-constants.glsl  nrc-descriptors.glsl  nvnn.glsl  oneblob.glsl  path_trace.glsl  random.glsl  restir-constants.glsl  restir-descriptors.glsl  volume.glsl
data/shader/matmul/: matmul.comp  matmul.comp.spv
data/shader/mc/: render.comp  render.comp.spv
data/shader/mrhe-step/: mrhe-step.comp  mrhe-step.comp.spv
data/shader/nrc/: backprop.comp  backprop.comp.spv  calc_targets.comp.spv  clear.comp  clear.comp.spv  filter_rays.comp  filter_rays.comp.spv  forward.comp  forward.comp.spv  gen_rays.comp  gen_rays.comp.spv  gradient_step.comp  gradient_step.comp.spv  prep_infer_rays.comp  prep_infer_rays.comp.spv  prep_ray_info.comp  prep_ray_info.comp.spv  prep_train_rays.comp  prep_train_rays.comp.spv  render.comp  render.comp.spv
data/shader/nrc-forward/: nrc-forward.frag  nrc-forward.frag.spv  nrc-forward.vert.spv
data/shader/nrc-old/mrhe-step/: mrhe-step.comp
data/shader/nrc-old/nrc-forward/: nrc-forward.frag  nrc-forward.frag.spv  nrc-forward.vert  nrc-forward.vert.spv
data/shader/nrc-old/nrc-train/: nrc-train.comp  nrc-train.comp.spv
data/shader/nrc-old/path-tracer/: path-tracer.frag  path-tracer.frag.spv  path-tracer.vert
data/shader/nrc-step/: nrc-step.comp  nrc-step.comp.spv
data/shader/nrc-train/: nrc-train.comp  nrc-train.comp.spv
data/shader/path-tracer/: path-tracer.frag  path-tracer.frag.spv  path-tracer.vert  path-tracer.vert.spv
data/shader/ref/: cmp.comp  cmp.comp.spv  cmp1.comp  cmp1.comp.spv  cmp2.comp  cmp2.comp.spv  norm.comp  norm.comp.spv
data/shader/restir/: local_init.comp  local_init.comp.spv  render.comp  render.comp.spv  spatial_reuse.comp  spatial_reuse.comp.spv  temporal_reuse.comp  temporal_reuse.comp.spv
data/shader/simple_material/: simple_material.frag  simple_material.frag.spv  simple_material.vert  simple_material.vert.spv
include/: cuda_main.hpp
include/engine/: AppConfig.hpp  Camera.hpp  HpmScene.hpp  VolumeData.hpp  VulkanAPI.hpp  Window.hpp  common.hpp  cuda_common.hpp  read_file.hpp
include/engine/compute/: Dataset.hpp  KomputeManager.hpp  Layer.hpp  LinearLayer.hpp  LinearLayerBackpropOp.hpp  LinearLayerForwardOp.hpp  MatSetValueOp.hpp  MataddOp.hpp  Matmul.hpp  MatmulOp.hpp  Matrix.hpp  NeuralNetwork.hpp  NrcDataset.hpp  ReluBackpropOp.hpp  ReluForwardOp.hpp  ReluLayer.hpp  SigmoidBackpropOp.hpp  SigmoidForwardOp.hpp  SigmoidLayer.hpp  Tensor.hpp  Vector.hpp
include/engine/graphics/: AccelerationStructure.hpp  Camera.hpp  DirLight.hpp  HdrEnvMap.hpp  MRHE.hpp  NeuralRadianceCache.hpp  OldNeuralRadianceCache.hpp  PointLight.hpp  PointLightArray.hpp  Reference.hpp  Sun.hpp  VolumeData.hpp  VolumeReservoir.hpp  VulkanAPI.hpp  Window.hpp  common.hpp
include/engine/graphics/renderer/: DensityPathTracer.hpp  GtHpmRenderer.hpp  ImGuiRenderer.hpp  McHpmRenderer.hpp  NrcHpmRenderer.hpp  RestirHpmRenderer.hpp  SimpleModelRenderer.hpp
include/engine/graphics/vulkan/: Buffer.hpp  CommandPool.hpp  CommandRecorder.hpp  ComputePipeline.hpp  Instance.hpp  Shader.hpp  Swapchain.hpp  Texture2D.hpp  Texture3D.hpp
include/engine/objects/: Material.hpp  Mesh.hpp  Model.hpp  Vertex.hpp  VolumeData.hpp
include/engine/renderer/: DensityPathTracer.hpp  ImGuiRenderer.hpp
include/engine/util/: Input.hpp  Log.hpp  LogFile.hpp  Time.hpp  compile_shader.hpp  keycode.hpp  mousecode.hpp  openexr_helper.hpp  read_file.hpp
include/engine/vulkan/: Buffer.hpp  CommandPool.hpp  CommandRecorder.hpp  ComputePipeline.hpp  Shader.hpp  Swapchain.hpp  Texture2D.hpp  Texture3D.hpp
linux_executable/: libcuda.so.1  librt.so.1  libvulkan.so.1
openvdb-linux/include/openvdb/points/: AttributeArray.h
output/: .gitignore
reference/0/: 0.exr  1.exr  2.exr  4.exr  5.exr
reference/1/: 1.exr  2.exr  5.exr
reference/2/: 0.exr
reference/4/: 0.exr
reference/5/: 0.exr
src/: AccelerationStructure.cpp  AppConfig.cpp  Buffer.cpp  Camera.cpp  CommandPool.cpp  CommandRecorder.cpp  ComputePipeline.cpp  Dataset.cpp  DensityPathTracer.cpp  DirLight.cpp  GtHpmRenderer.cpp  HdrEnvMap.cpp  HpmScene.cpp  ImGuiRenderer.cpp  Input.cpp  Instance.cpp  KomputeManager.cpp  Layer.cpp  LinearLayer.cpp  LinearLayerBackpropOp.cpp  LinearLayerForwardOp.cpp  Log.cpp  LogFile.cpp  MRHE.cpp  MatSetValueOp.cpp  MataddOp.cpp  Material.cpp  Matmul.cpp  MatmulOp.cpp  Matrix.cpp  McHpmRenderer.cpp  Mesh.cpp  Model.cpp  NeuralNetwork.cpp  NeuralRadianceCache.cpp  NeuralRadianceCache.cu  NrcHpmRenderer.cpp  NrcHpmRenderer.cu  OldNeuralRadianceCache.cpp  OldNrcHpmRenderer.cpp  (+30 more)
